<resources>
    <string name="app_name">天气模仿</string>
    <string name="level_1">健康</string>
    <string name="level_2">优</string>
    <string name="level_3">良</string>
    <string name="level_4">轻度</string>
    <string name="level_5">中度</string>
    <string name="level_6">重度</string>
    <string name="level_7">严重</string>

    <string name="level_desc1">空气很好,万物皆宜</string>
    <string name="level_desc2">空气不错,可以放心外出哦</string>
    <string name="level_desc3">空气还可以哦,各种运动皆可以</string>
    <string name="level_desc4">空很气一般般,不适合剧烈运动</string>
    <string name="level_desc5">空气不太好,请注意健康</string>
    <string name="level_desc6">空气很糟糕,不建议外出</string>
    <string name="level_desc7">空气中毒了</string>

    <string name="unknown">未知</string>
    <string name="air">空气</string>
    <string name="my_focus_city">我关注的城市</string>
    <string name="edit_city">编辑城市</string>
    <string name="add_city">添加城市</string>
    <string name="cancel_update">取消修改</string>
    <string name="confirm_update">确定修改</string>
    <string name="exit_app">退出应用</string>
    <string name="about_weather">关于天气</string>
    <string name="message_board">留言板</string>
    <string name="index">指数:</string>
    <string name="level">级</string>
    <string name="current">当前:</string>
    <string name="air_pressure">气压</string>
    <string name="air_pressure_unit">pHa</string>
    <string name="today_live_index">今天生活指数</string>
    <string name="ultraviolet_rays">紫外线:</string>
    <string name="sunup">日出:</string>
    <string name="sunset">日落:</string>
    <string name="humidity">湿度:</string>
    <string name="spread">展开查看更多</string>
    <string name="shrink">收起</string>
    <string name="select_city">选择城市</string>
    <string name="select_area">选择地区</string>
    <string name="select_country">选择国家</string>
    <string name="select_province">选择省份</string>
    <string name="international_city">国际城市</string>
    <string name="today_detail">今天详情</string>
    <string name="tomorrow_detail">明天详情</string>

    <string name="xlistview_header_hint_normal">下拉刷新…</string>
    <string name="xlistview_header_hint_ready">放开刷新…</string>
    <string name="xlistview_header_hint_loading">正在刷新…</string>
    <string name="xlistview_footer_hint_loading">正在加载更多…</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多…</string>
    <string name="xlistview_footer_hint_ready">松开加载更多…</string>

    <item type="id" name="tag_child_index"/>
    <item type="id" name="tag_position_index"/>

</resources>
